# ksng

./: Cargo.toml  README.md  TODO  index.html  ksng.code-workspace  rust-toolchain
.github/workflows/: rust.yml
assets/: sw.js
assets/icons/: info.txt
lib/: LICENSE
lib/klib/: Cargo.toml
lib/klib-macros/: Cargo.toml
lib/klib-macros/src/: error.rs  lib.rs
lib/klib/src/: config.rs  editable_config.rs  error.rs  lib.rs  style.rs  timecode.rs
lib/klib/src/audio/: info.rs  mixer_stream.rs  mod.rs
lib/klib/src/formats/: ksf.rs  mod.rs
lib/klib/src/objects/: audio.rs  event.rs  file.rs  mod.rs  track.rs
lib/klib/src/util/: easing.rs  editable_config.rs  mod.rs  rect.rs
lib/klib/src/video/: context.rs  mod.rs  renderer.rs  sequence.rs  vacancy.rs
lib/klib/src/video/elements/: mod.rs  paragraph.rs  solid.rs  text.rs
lib/klib/src/video/layouts/: mod.rs  paragraph.rs
lib/klib/src/video/transitions/: fade.rs  mod.rs  none.rs  slide.rs
src/: app.rs  async_handler.rs  data.rs  error.rs  fs.rs  icons.rs  lib.rs  logger.rs  main.rs  playback.rs  preferences.rs  project.rs  selection.rs  ui_event.rs  video.rs
src/audio/: config.rs  info.rs  mixer.rs  mixer_stream.rs  mod.rs  waveform.rs
src/commands/: event.rs  mod.rs  track.rs
src/components/: config_editor.rs  lyrics_editor.rs  menu_bar.rs  mod.rs  player.rs  timeline.rs
src/components/lyrics_editor/: mod.rs  psuedo_event.rs  text_element.rs
src/modals/: alert.rs  confirm.rs  dirty_warning.rs  mod.rs  open_file.rs  open_project.rs  save_project.rs
src/style/: colors.rs  icons.rs
src/util/: logger.rs  mod.rs  ui.rs  ui_event.rs
src/windows/: mod.rs  preferences.rs  sync.rs  track_config.rs
