[package]
name = "ksng"
version = "0.1.0"
authors = ["Cardboard Cowboys"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
klib = { path = "./lib/klib", features = ["audio"] }

# You only need serde if you want app persistence:
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["alloc", "serde"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
egui-file-dialog = "0.11.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
once_cell = "1.21.3"
tiny-skia = "0.11.4"
image = { version = "0.25.6", features = ["png"], default-features = false }
egui_flex = "0.4.0"
egui-wgpu = "0.32.0"
wgpu = "25.0.0"
regex = "1.12.2"
cpal = { version = "0.17.0" }
#bungee-rs = "0.1.1"
circular-buffer = "1.2.0"
similar = { version = "2.7.0", default-features = false }
colog = "1.3.0"
directories = "6.0.0"
symphonia = { version = "0.5.4", features = ["mp3", "aac"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace]
resolver = "2"
members = [".", "lib/klib", "lib/klib-macros"]
