[package]
name = "klib"
version = "0.1.0"
edition = "2021"

[dependencies]
binary_rw = "4.1.0"
log = "0.4.27"
parley = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sortedlist-rs = "0.2.5"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
vello = { git = "https://github.com/linebender/vello.git", rev = "acd8724d1cb61a2cf509413bad9830ad65621c9b" }
wgpu = { version = "25.0.0", default-features = false }
