[package]
name = "klib"
version = "0.1.0"
edition = "2021"

[dependencies]
binary_rw = "4.1.0"
harfbuzz_rs = { version = "2.0.1", default-features = false, features = ["build-native-harfbuzz"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-easing = "1.0.1"
skia-safe = "0.87.0"
sortedlist-rs = "0.2.5"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
